--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+jax = {extras = ["tpu"], version = "*"}
+flax = "*"
+torch = "==1.12.0"
+torch-xla = {file = "https://storage.googleapis.com/tpu-pytorch/wheels/tpuvm/torch_xla-1.12-cp38-cp38-linux_x86_64.whl", extras = ["tpuvm"]}
 numpy = "*"
-jax = {extras = ["cpu"], version = "*"}
+datasets = "*"
 tqdm = "*"
 click = "*"
-flax = "*"
 
 [dev-packages]
 scipy = "*"
@@ -16,8 +19,6 @@ flake8 = "*"
 pytest = "*"
 mypy = "*"
 black = "*"
-tensorflow = "*"
-tbp-nightly = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
