adversarial examples via projected gradient descent

--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+torch = "==1.12.0"
+torchvision = "==0.13.0"
+torch-xla = {file = "https://storage.googleapis.com/tpu-pytorch/wheels/tpuvm/torch_xla-1.12-cp38-cp38-linux_x86_64.whl", extras = ["tpuvm"]}
 jax = {extras = ["tpu"], version = "*"}
 flax = "*"
-torch = "==1.12.0"
-torch-xla = {file = "https://storage.googleapis.com/tpu-pytorch/wheels/tpuvm/torch_xla-1.12-cp38-cp38-linux_x86_64.whl", extras = ["tpuvm"]}
+optax = "*"
+tensorflow-cpu = "*"
+matplotlib = "*"
 numpy = "*"
-datasets = "*"
 tqdm = "*"
 click = "*"
+
 
 [dev-packages]
 scipy = "*"
